rnsc/test_data/integration/error/parser/outside_class_directive/before_class_dir/dot_annotation.rns
.annotation actually can't be here
.class public HelloWorld
.super java/lang/Object
